--- a/docker/docker-compose-with-n8n.yaml
+++ b/docker/docker-compose-with-n8n.yaml
@@ -998,7 +998,7 @@ services:
   # n8n
   n8n:
     image: n8nio/n8n:latest
-    restart: unless-stopped
+    restart: always
     ports:
       - "5678:5678"
     volumes:
