feat(docker): add N8N_WEBHOOK_URL env variable to .env.example and docker-compose file
This change allows users to configure the N8N webhook URL via an environment variable. This is useful for setting up integrations with n8n.

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -968,3 +968,4 @@ FORCE_VERIFYING_SIGNATURE=true
 # Environment Variables for n8n
 # ------------------------------
 N8N_SERVER_NAME=_
+N8N_WEBHOOK_URL=
