feat(docker): add shared_bridge_network to n8n service

--- a/docker/docker-compose-with-n8n.yaml
+++ b/docker/docker-compose-with-n8n.yaml
@@ -1008,6 +1008,8 @@ services:
       - n8n_storage:/home/node/.n8n
       - ./n8n/backup:/backup
       - ./shared:/data/shared
+    networks:
+      - shared_bridge_network
 
 networks:
   # create a network between sandbox, api and ssrf_proxy, and can not access outside.
