feat(docker): add N8N_SERVER_NAME env variable to docker compose file
This allows users to configure the N8N server name via an environment
variable. The default value is set to "_" if the variable is not
defined.

--- a/docker/docker-compose-with-n8n.yaml
+++ b/docker/docker-compose-with-n8n.yaml
@@ -410,6 +410,7 @@ x-shared-env: &shared-api-worker-env
   MARKETPLACE_ENABLED: ${MARKETPLACE_ENABLED:-true}
   MARKETPLACE_API_URL: ${MARKETPLACE_API_URL:-https://marketplace.dify.ai}
   FORCE_VERIFYING_SIGNATURE: ${FORCE_VERIFYING_SIGNATURE:-true}
+  N8N_SERVER_NAME: ${N8N_SERVER_NAME:-_}
   N8N_WEBHOOK_URL: ${N8N_WEBHOOK_URL:-}
 
 services:
@@ -638,6 +639,7 @@ services:
       NGINX_PROXY_SEND_TIMEOUT: ${NGINX_PROXY_SEND_TIMEOUT:-3600s}
       NGINX_ENABLE_CERTBOT_CHALLENGE: ${NGINX_ENABLE_CERTBOT_CHALLENGE:-false}
       CERTBOT_DOMAIN: ${CERTBOT_DOMAIN:-}
+      N8N_SERVER_NAME: ${N8N_SERVER_NAME:-_}
     depends_on:
       - api
       - web
