feat(docker): add firecrawl service to docker-compose and nginx
This commit adds the firecrawl service to the docker-compose file,
configures the necessary environment variables, and sets up nginx
to proxy requests to the firecrawl service.

The firecrawl service is a separate application that will be used
for web scraping. This commit adds the necessary configuration to
run the firecrawl service in docker and expose it through nginx.

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -969,3 +969,8 @@ FORCE_VERIFYING_SIGNATURE=true
 # ------------------------------
 N8N_SERVER_NAME=_
 N8N_WEBHOOK_URL=
+
+# ------------------------------
+# Environment Variables for firecrawl
+# ------------------------------
+FIRECRAWL_SERVER_NAME=_
