feat(docker): add n8n configurations to docker-compose file
This commit adds several configurations to the n8n service in the
docker-compose file to improve functionality and security:

- Sets N8N_SECURE_COOKIE to false.
- Skips Chromium download during the build process.
- Disables TLS rejection for unauthorized certificates.
- Sets a custom User-Agent string.
- Increases shared memory size for the container.
- Installs Chrome and ChromeDriver.

--- a/docker/docker-compose-with-n8n.yaml
+++ b/docker/docker-compose-with-n8n.yaml
@@ -1006,6 +1006,11 @@ services:
       - "5678:5678"
     environment:
       WEBHOOK_URL: ${N8N_WEBHOOK_URL:-}
+      N8N_SECURE_COOKIE: false
+      # Puppeteer configurations
+      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
+      NODE_TLS_REJECT_UNAUTHORIZED: "0"
+      USER_AGENT: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36"
     volumes:
       - n8n_storage:/home/node/.n8n
       - ./n8n/backup:/backup
@@ -1014,6 +1019,12 @@ services:
       - shared_bridge_network
       - ssrf_proxy_network
       - default
+    shm_size: '1gb'
+    # Install Chrome and required dependencies
+    command: >
+      /bin/sh -c '
+        apk add --no-cache chromium chromium-chromedriver;
+        n8n start'
 
 networks:
   # create a network between sandbox, api and ssrf_proxy, and can not access outside.
