--- a/docker/docker-compose-with-n8n.yaml
+++ b/docker/docker-compose-with-n8n.yaml
@@ -1020,11 +1020,11 @@ services:
       - ssrf_proxy_network
       - default
     shm_size: '1gb'
-    # Install Chrome and required dependencies
-    command: >
-      /bin/sh -c '
-        apk add --no-cache chromium chromium-chromedriver;
-        n8n start'
+    # # Install Chrome and required dependencies
+    # command: >
+    #   /bin/sh -c '
+    #     apk add --no-cache chromium chromium-chromedriver;
+    #     n8n start'
 
 networks:
   # create a network between sandbox, api and ssrf_proxy, and can not access outside.
