feat(docker): add n8n integration with puppeteer and timezone support
This commit introduces n8n integration with puppeteer and adds timezone support.

The changes include:

- Adds a new Dockerfile for n8n with puppeteer support.
- Adds a custom entrypoint script for n8n to print environment details.
- Adds a new environment variable `N8N_TIMEZONE` to set the timezone for n8n.
- Updates the docker-compose file to use the new n8n image and set the timezone.
- Updates the .env.example file to include the new environment variable.

The reason for these changes is to provide a more complete and customizable n8n experience.

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -969,6 +969,7 @@ FORCE_VERIFYING_SIGNATURE=true
 # ------------------------------
 N8N_SERVER_NAME=_
 N8N_WEBHOOK_URL=
+N8N_TIMEZONE=Asia/Seoul
 
 # ------------------------------
 # Environment Variables for firecrawl
