feat(docker): add DB_POSTGRESDB_PORT env variable to n8n
This allows the n8n service to connect to the postgres database
on a configurable port.

--- a/docker/docker-compose-with-n8n.yaml
+++ b/docker/docker-compose-with-n8n.yaml
@@ -1007,6 +1007,7 @@ services:
       DB_TYPE: postgresdb
       DB_POSTGRESDB_HOST: db
       DB_POSTGRESDB_DATABASE: ${POSTGRES_DB:-dify}
+      DB_POSTGRESDB_PORT: ${EXPOSE_DB_PORT:-5432}
       DB_POSTGRESDB_USER: ${PGUSER:-postgres}
       DB_POSTGRESDB_PASSWORD: ${POSTGRES_PASSWORD:-difyai123456}
       N8N_DIAGNOSTICS_ENABLED: false
