--- a/docker/docker-compose-with-n8n.yaml
+++ b/docker/docker-compose-with-n8n.yaml
@@ -1015,7 +1015,7 @@ services:
       N8N_ENCRYPTION_KEY:
       N8N_USER_MANAGEMENT_JWT_SECRET:
       N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS: true
-      N8N_SERVER_NAME: ${N8N_SERVER_NAME:-_}
+      N8N_HOST: ${N8N_SERVER_NAME:-}
       N8N_WEBHOOK_URL: ${N8N_WEBHOOK_URL:-}
       N8N_TIMEZONE: ${N8N_TIMEZONE:-Asia/Seoul}
     depends_on:
