--- a/docker/docker-compose-with-n8n.yaml
+++ b/docker/docker-compose-with-n8n.yaml
@@ -1015,6 +1015,7 @@ services:
       N8N_PORT: 5678
       N8N_HOST: ${N8N_SERVER_NAME:-}
       N8N_WEBHOOK_URL: ${N8N_WEBHOOK_URL:-}
+      VUE_APP_URL_BASE_API: ${N8N_WEBHOOK_URL:-}
       GENERIC_TIMEZONE: ${N8N_TIMEZONE:-Asia/Seoul}
     depends_on:
       db:
