feat(docker-compose-with-n8n.yaml): update n8n volume path to use local storage

--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,7 @@ docker-legacy/volumes/pgvectors/data/*
 docker-legacy/volumes/pgvector/data/*
 
 docker/volumes/app/storage/*
+docker/volumes/n8n/storage/*
 docker/volumes/certbot/*
 docker/volumes/db/data/*
 docker/volumes/redis/data/*
