feat(docker-compose-with-n8n.yaml): add N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS environment variable

--- a/docker/docker-compose-with-n8n.yaml
+++ b/docker/docker-compose-with-n8n.yaml
@@ -1015,6 +1015,7 @@ services:
       N8N_HOST: ${N8N_SERVER_NAME:-}
       WEBHOOK_URL: ${N8N_WEBHOOK_URL:-}
       GENERIC_TIMEZONE: ${N8N_TIMEZONE:-Asia/Seoul}
+      N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS: false
     depends_on:
       db:
         condition: service_healthy
