--- a/docker/docker-compose-with-n8n.yaml
+++ b/docker/docker-compose-with-n8n.yaml
@@ -1011,10 +1011,13 @@ services:
       DB_POSTGRESDB_PORT: ${EXPOSE_DB_PORT:-5432}
       DB_POSTGRESDB_USER: ${PGUSER:-postgres}
       DB_POSTGRESDB_PASSWORD: ${POSTGRES_PASSWORD:-difyai123456}
+      N8N_PORT: 5678
+      N8N_PROTOCOL: https
       NODE_ENV: production
       N8N_HOST: ${N8N_SERVER_NAME:-}
       WEBHOOK_URL: ${N8N_WEBHOOK_URL:-}
       GENERIC_TIMEZONE: ${N8N_TIMEZONE:-Asia/Seoul}
+      N8N_RUNNERS_ENABLED: true
       N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS: false
     depends_on:
       db:
