--- a/docker/docker-compose-with-n8n.yaml
+++ b/docker/docker-compose-with-n8n.yaml
@@ -638,6 +638,7 @@ services:
       NGINX_PROXY_SEND_TIMEOUT: ${NGINX_PROXY_SEND_TIMEOUT:-3600s}
       NGINX_ENABLE_CERTBOT_CHALLENGE: ${NGINX_ENABLE_CERTBOT_CHALLENGE:-false}
       CERTBOT_DOMAIN: ${CERTBOT_DOMAIN:-}
+      N8N_SERVER_NAME: ${N8N_SERVER_NAME:-_}
     depends_on:
       - api
       - web
